# optimizelyd-maildir

./: Cargo.toml  README.md
src/: jsonsender.rs  maildirqueue.rs  main.rs
