[package]
name = "optimizelyd-maildir"
version = "0.1.0"
authors = ["Thomas Zurkan <thomas.zurkan@optimizely.com>"]

[dependencies]
futures = "0.1.14"
hyper = "0.11.0"
hyper-tls = "0.1.2"
tokio-core = "0.1.8"
libc = "0.2.24"
serde = "1.0"
serde_json =  "1.0"
url = "*"
uuid = { version = "0.4", features = ["serde", "v4"] }
#libc = "0.2.24"
#mmap = "0.1.1"
